--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,31 @@
 *{
   box-sizing: border-box;
 }
+body{
+  background-color: #F7F7F7;
+  padding: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
+.page-wrapper{
+  max-width: 430px;
+  margin: auto;
+  background-color: #F7F7F7;
+  box-shadow: 0px 0px 30px rgba(127, 127, 127, 0.25);
+  border-radius: 20px 20px 56px 56px;
+}
+.header {
+  color: #fff;
+  padding: 61px 49px 136px;
+  background: linear-gradient(0deg, rgba(58, 58, 58, 0.6), rgba(58, 58, 58, 0.6)), url('../img/header-bg.jpg') no-repeat  center / cover;
+  border-radius: 0px 0px 56px 56px;
+}
+.hello{
+  font-weight:500;
+  font-size:24px;
+  line-height:26px;
+}
+.hello-text{
+  font-weight:400;
+  font-size:20px;
+  line-height:24px;
+}
