--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,21 @@ body{
   font-family: 'Montserrat', sans-serif;
 }
 .page-wrapper{
+  overflow: hidden;
   max-width: 430px;
   margin: auto;
   background-color: #F7F7F7;
   box-shadow: 0px 0px 30px rgba(127, 127, 127, 0.25);
   border-radius: 20px 20px 56px 56px;
 }
+.container{ 
+  max-width: 368px;
+  margin: auto;
+
+}
 .header {
   color: #fff;
-  padding: 61px 49px 136px;
+  padding: 34px 49px 122px;
   background: linear-gradient(0deg, rgba(58, 58, 58, 0.6), rgba(58, 58, 58, 0.6)), url('../img/header-bg.jpg') no-repeat  center / cover;
   border-radius: 0px 0px 56px 56px;
 }
@@ -28,4 +34,32 @@ body{
   font-weight:400;
   font-size:20px;
   line-height:24px;
+}
+.user{
+margin-top: -67px;
+text-align: center;
+background-color:#ffffff;
+box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.05);
+border-radius: 12px;
+padding-bottom: 25px;
+}
+.user-name{
+margin-top: 14px;
+margin-bottom: 15px;
+font-weight: 500;
+font-size: 20px;
+line-height: 0px;
+}
+.user-avatar{
+  margin-top: -49px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 6px solid #F7F7F7;
+}
+.user-description{
+margin: 0;
+font-weight: 400;
+font-size: 16px;
+line-height: 19px;
+color:#000000;
 }
